# car-soa

./: CMakeLists.txt  README.md  check_vsomeip.sh  dataelementinfo.md  project.md  serviceinfo.md  test_cmake.sh  tongxin.md
.cursor/rules/: car-rules.mdc
cmake/: BuildOptions.cmake  CompilerSettings.cmake  Dependencies.cmake
config/: CMakeLists.txt  system_config.json
docs/: architecture_summary.md  browser_compatibility.md  browser_debugging_guide.md  build_and_test_guide.md  cmake_organization_analysis.md  code_corrections.md  code_quality_assessment.md  code_separation_summary.md  communication_layer_complete.md  frontend_deployment_guide.md  frontend_development_plan.md  frontend_files_integration.md  frontend_startup_guide.md  light_service_implementation.md  rest_api_implementation.md  seat_service_implementation.md  ui_optimization_summary.md  vsomeip_fixes_summary.md  window_service_implementation.md  windows_setup_guide.md
include/application/: data_structures.h
include/communication/: serialization.h  someip_client.h  someip_service_definitions.h
include/interface/: rest_api_definitions.h
include/web_api/: api_handlers.h  callback_manager.h  config_manager.h  error_handler.h  http_server.h  json_converter.h
scripts/: build_windows.bat  stage1_basic_connection.bat  stage2_frontend_integration.bat  stage3_vsomeip_preparation.bat  start_backend_windows.bat  test_api_windows.ps1  test_connection_windows.bat
src/: CMakeLists.txt  main_web_server.cpp  test_door_client.cpp  test_light_client.cpp  test_seat_client.cpp  test_window_client.cpp
src/communication/: CMakeLists.txt  door_service_client.cpp  light_service_client.cpp  seat_service_client.cpp  someip_client.cpp  window_service_client.cpp
src/tests/: CMakeLists.txt
src/web_api/: CMakeLists.txt  api_handlers.cpp  http_server.cpp  json_converter.cpp
vsomeip_services/: CMakeLists.txt  README.md  build.bat  build.sh  run_services.bat  run_services.sh
vsomeip_services/config/: vsomeip_services.json
vsomeip_services/include/common/: hardware_simulator.h  serializer.h
vsomeip_services/include/services/: door_service.h  light_service.h  seat_service.h  service_manager.h  window_service.h
vsomeip_services/src/: main.cpp
vsomeip_services/src/common/: hardware_simulator.cpp  serializer.cpp
vsomeip_services/src/services/: door_service.cpp  light_service.cpp  seat_service.cpp  service_manager.cpp  window_service.cpp
web/: index.html
web/css/: style.css
web/js/: api.js  sse.js
